add in some missing behavior descriptions in README file. Add html for pizza order form with checkboxes for toppings and radio buttons for size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,52 @@
   <body>
     <div class="containter">
       <div class="row">
-
+        <div class="col-sm-4 col-sm-offset-4"
+          <form id="order">
+            <div class="form-group">
+              <h4 class="form-input-headers">Toppings:</h4>
+              <div class="checkbox">
+              <label><input type="checkbox" value="Pepperoncinis">Pepperoncinis</label>
+              </div>
+              <div class="checkbox">
+              <label><input type="checkbox" value="Roasted Garlic">Roasted Garlic</label>
+              </div>
+              <div class="checkbox">
+              <label><input type="checkbox" value="Mushrooms">Mushrooms</label>
+              </div>
+              <div class="checkbox">
+              <label><input type="checkbox" value="Kalamatas">Kalamatas</label>
+              </div>
+              <div class="checkbox">
+              <label><input type="checkbox" value="Artichokes">Artichokes</label>
+              </div>
+              <div class="checkbox">
+              <label><input type="checkbox" value="Basil">Basil</label>
+              </div>
+              <div class="checkbox">
+              <label><input type="checkbox" value="Black Olives">Black Olives</label>
+              </div>
+              <div class="checkbox">
+              <label><input type="checkbox" value="Spinach">Spinach</label>
+              </div>
+            </div>
+            <div class="form-group">
+              <h4 class="form-input-headers">Size:</h4>
+              <div class="radio">
+                <label><input type="radio" name="size" value="18">18"</label>
+              </div>
+              <div class="radio">
+                <label><input type="radio" name="size" value="14">14"</label>
+              </div>
+              <div class="radio">
+                <label><input type="radio" name="size" value="12">12"</label>
+              </div>
+              <div class="form-group">
+                <button type="submit">Place Order</button>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </body>
