--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery.1.12.4.js"></script>
+    <script src="js/jquery-1.12.4.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/scripts.js"></script>
     <title>Pizza Order</title>
@@ -12,33 +12,33 @@
   <body>
     <div class="containter">
       <div class="row">
-        <div class="col-sm-4 col-sm-offset-4"
+        <div class="col-sm-4 col-sm-offset-4">
           <form id="order">
             <div class="form-group">
               <h4 class="form-input-headers">Toppings:</h4>
               <div class="checkbox">
-              <label><input type="checkbox" value="Pepperoncinis">Pepperoncinis</label>
+              <label><input type="checkbox" name="toppings" value="Pepperoncinis">Pepperoncinis</label>
               </div>
               <div class="checkbox">
-              <label><input type="checkbox" value="Roasted Garlic">Roasted Garlic</label>
+              <label><input type="checkbox" name="toppings" value="Roasted Garlic">Roasted Garlic</label>
               </div>
               <div class="checkbox">
-              <label><input type="checkbox" value="Mushrooms">Mushrooms</label>
+              <label><input type="checkbox" name="toppings" value="Mushrooms">Mushrooms</label>
               </div>
               <div class="checkbox">
-              <label><input type="checkbox" value="Kalamatas">Kalamatas</label>
+              <label><input type="checkbox" name="toppings" value="Kalamatas">Kalamatas</label>
               </div>
               <div class="checkbox">
-              <label><input type="checkbox" value="Artichokes">Artichokes</label>
+              <label><input type="checkbox" name="toppings" value="Artichokes">Artichokes</label>
               </div>
               <div class="checkbox">
-              <label><input type="checkbox" value="Basil">Basil</label>
+              <label><input type="checkbox" name="toppings" value="Basil">Basil</label>
               </div>
               <div class="checkbox">
-              <label><input type="checkbox" value="Black Olives">Black Olives</label>
+              <label><input type="checkbox" name="toppings" value="Black Olives">Black Olives</label>
               </div>
               <div class="checkbox">
-              <label><input type="checkbox" value="Spinach">Spinach</label>
+              <label><input type="checkbox" name="toppings" value="Spinach">Spinach</label>
               </div>
             </div>
             <div class="form-group">
