add prototype to calculate the total cost of the pizza order and html container to output that cost

--- a/index.html
+++ b/index.html
@@ -44,19 +44,26 @@
             <div class="form-group">
               <h4 class="form-input-headers">Size:</h4>
               <div class="radio">
-                <label><input type="radio" name="size" value="18">18"</label>
+                <label><input type="radio" name="size" value="25">18"</label>
               </div>
               <div class="radio">
-                <label><input type="radio" name="size" value="14">14"</label>
+                <label><input type="radio" name="size" value="16">14"</label>
               </div>
               <div class="radio">
-                <label><input type="radio" name="size" value="12">12"</label>
+                <label><input type="radio" name="size" value="14">12"</label>
               </div>
               <div class="form-group">
                 <button type="submit">Place Order</button>
               </div>
             </div>
           </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4 col-sm-offset-4">
+          <div class="outputTotal">
+
+          </div>
         </div>
       </div>
     </div>
