update css to link to pizza icon that displays next to selected radio button

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <label for="small">Small 12"</label>
               </div>
               <div class="form-group">
-                <button type="submit">Place Order</button>
+                <button type="submit">Calculate Total</button>
               </div>
             </div>
           </form>
