add output divs to index page and script to output properties in the newPizza object

--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
       </div>
       <div class="row">
         <div class="col-sm-4 col-sm-offset-4">
+          <div class="outputSize">
+          </div>
+          <div class="outputIngredients">
+          </div>
           <div class="outputTotal">
-
           </div>
         </div>
       </div>
