add style to header tags and an image at the top of the page

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
   <body>
     <div class="containter">
       <div class="row">
-        <div class="col-sm-4 col-sm-offset-4">
+        <div class="col-md-4 col-md-offset-4">
+          <img src="img/pizza-hero.png" class="img-responsive">
           <h1>Build Your Pizza</h1>
           <form id="order">
             <div class="form-group">
-              <h4 class="form-input-headers">Toppings:</h4>
+              <h3 class="form-input-headers">Toppings:</h3>
               <div class="checkbox">
               <input id="Pepperoncinis" type="checkbox" name="toppings" value="Pepperoncinis">
               <label for="Pepperoncinis">Pepperoncinis</label>
@@ -52,7 +53,7 @@
               </div>
             </div>
             <div class="form-group">
-              <h4 class="form-input-headers">Size:</h4>
+              <h3 class="form-input-headers">Size:</h3>
               <div class="radio">
                 <input type="radio" id="large" name="size" value="25">
                 <label for="large">Large 18"</label>
@@ -73,7 +74,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4 col-sm-offset-4">
+        <div class="col-md-4 col-md-offset-4">
           <div class="outputSize">
           </div>
           <div class="outputIngredients">
